force-app/main/default/objects/Lease_Negotiation__c/fields/Non_MLA_days_between_Agree_Neg__c.field-meta.xml
<CustomField>
    <fullName>Non_MLA_days_between_Agree_Neg__c</fullName>
    <formula>Non_MLA_Termination_Process_End_Date__c - Agreement_neg_with_landlord_start_date__c</formula>
    <label>Non-MLA days elapsed Agree Neg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>