force-app/main/default/objects/Lease_Negotiation__c/fields/Non_MLA_Termination_Process_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Non_MLA_Termination_Process_Start_Date__c</fullName>
    <inlineHelpText>Indicates when negotiation started in this status.</inlineHelpText>
    <label>Non-MLA Termination Process Start Date</label>
    <type>Date</type>
</CustomField>