force-app/main/default/objects/Lease_Negotiation__c/fields/NOT_NNR_Approval__c.field-meta.xml
<CustomField>
    <fullName>NOT_NNR_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check the box if the submitted Notice of Termination/Notice of Non-Renewal is approved.</inlineHelpText>
    <label>NOT/NNR Approval</label>
    <type>Checkbox</type>
</CustomField>