force-app/main/default/objects/Lease_Negotiation__c/fields/NOT_NNR_approved_by__c.field-meta.xml
<CustomField>
    <fullName>NOT_NNR_approved_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>auto filled when approval is given.</inlineHelpText>
    <label>NOT/NNR approved by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lease_Negotiation</relationshipName>
    <type>Lookup</type>
</CustomField>