force-app/main/default/objects/Lease_Negotiation__c/fields/NOT_NNR_Sent_to_Landlord__c.field-meta.xml
<CustomField>
    <fullName>NOT_NNR_Sent_to_Landlord__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Actualized when NOT/NRR Sent to Landlord by Lease Negotiation Team.</inlineHelpText>
    <label>NOT/NNR Sent to Landlord</label>
    <type>Checkbox</type>
</CustomField>