force-app/main/default/objects/Lease_Negotiation__c/fields/NTP_Complete__c.field-meta.xml
<CustomField>
    <fullName>NTP_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NTP Complete</label>
    <type>Checkbox</type>
</CustomField>