force-app/main/default/objects/Lease_Negotiation__c/fields/NTP_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>NTP_Complete_Date__c</fullName>
    <inlineHelpText>Auto Filled by a Process.</inlineHelpText>
    <label>NTP Complete Date</label>
    <type>DateTime</type>
</CustomField>