force-app/main/default/objects/Lease_Negotiation__c/fields/NTP_Sent_to_Decom_Team__c.field-meta.xml
<CustomField>
    <fullName>NTP_Sent_to_Decom_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This box is checked automatically when the related NTP has the same field checked. You should not do it from this record.</inlineHelpText>
    <label>NTP Sent to Decom Team</label>
    <type>Checkbox</type>
</CustomField>