force-app/main/default/objects/Lease_Negotiation__c/fields/NTP_Sent_to_Decom_Team_Date__c.field-meta.xml
<CustomField>
    <fullName>NTP_Sent_to_Decom_Team_Date__c</fullName>
    <inlineHelpText>Autofilled by a process.</inlineHelpText>
    <label>NTP Sent to Decom Team Date</label>
    <type>DateTime</type>
</CustomField>