force-app/main/default/objects/Lease_Negotiation__c/fields/Option_Date__c.field-meta.xml
<CustomField>
    <fullName>Option_Date__c</fullName>
    <formula>Dish_Option__r.Option_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Option Date</label>
    <type>Date</type>
</CustomField>