force-app/main/default/objects/Lease_Negotiation__c/fields/Penalty_PO_1__c.field-meta.xml
<CustomField>
    <fullName>Penalty_PO_1__c</fullName>
    <formula>IF( Submitter_Assignment_Date__c + 90 &gt;  DATEVALUE(NTP_Sent_to_Decom_Team_Date__c) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Start: Submitter is first identified End: Send NTP to Decon Team (Date). If &gt;90 days, then flag this PO to be issued</inlineHelpText>
    <label>Penalty PO #1</label>
    <type>Checkbox</type>
</CustomField>