force-app/main/default/objects/Lease_Negotiation__c/fields/Permit_Received_Actual_Date__c.field-meta.xml
<CustomField>
    <fullName>Permit_Received_Actual_Date__c</fullName>
    <formula>Site_Deconstruction__r.Permit_Received_Actual_Date__c</formula>
    <inlineHelpText>Populated from related deconstruction record</inlineHelpText>
    <label>Permit Received Actual Date</label>
    <type>Date</type>
</CustomField>