force-app/main/default/objects/Lease_Negotiation__c/fields/Physical_Decon_Process_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Physical_Decon_Process_Start_Date__c</fullName>
    <inlineHelpText>Indicates when negotiation started in this status.</inlineHelpText>
    <label>Physical Decon Process Start Date</label>
    <type>Date</type>
</CustomField>