force-app/main/default/objects/Lease_Negotiation__c/fields/PO_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Date__c</fullName>
    <formula>Lease_Negotiation_Vendor_PO_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Date</label>
    <type>Date</type>
</CustomField>