force-app/main/default/objects/Lease_Negotiation__c/fields/PO_Divestiture_Site__c.field-meta.xml
<CustomField>
    <fullName>PO_Divestiture_Site__c</fullName>
    <formula>Divestiture_Site__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Divestiture Site</label>
    <type>Text</type>
</CustomField>