force-app/main/default/objects/Lease_Negotiation__c/fields/PO_Landlord_Entity__c.field-meta.xml
<CustomField>
    <fullName>PO_Landlord_Entity__c</fullName>
    <formula>Landlord_Entity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Landlord Entity</label>
    <type>Text</type>
</CustomField>