force-app/main/default/objects/Lease_Negotiation__c/fields/PO_Line_1__c.field-meta.xml
<CustomField>
    <fullName>PO_Line_1__c</fullName>
    <description>TAW Approved (Date)</description>
    <inlineHelpText>TAW Approved (Date)</inlineHelpText>
    <label>PO Line #1</label>
    <type>Date</type>
</CustomField>