force-app/main/default/objects/Lease_Negotiation__c/fields/PO_Line_2__c.field-meta.xml
<CustomField>
    <fullName>PO_Line_2__c</fullName>
    <formula>NTP_Sent_to_Decom_Team_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Send NTP to Deconstruction Team (Date)</inlineHelpText>
    <label>PO Line #2</label>
    <type>DateTime</type>
</CustomField>