force-app/main/default/objects/Lease_Negotiation__c/fields/PO_LIne_3__c.field-meta.xml
<CustomField>
    <fullName>PO_LIne_3__c</fullName>
    <formula>IF(ISPICKVAL(Agreement_Outcome__c, &quot;&quot;),false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Updated from Agreement Outcome field</inlineHelpText>
    <label>PO LIne #3</label>
    <type>Checkbox</type>
</CustomField>