force-app/main/default/objects/Lease_Negotiation__c/fields/PO_Sprint_or_T_Mobile__c.field-meta.xml
<CustomField>
    <fullName>PO_Sprint_or_T_Mobile__c</fullName>
    <formula>Divestiture_Site__r.Sprint_S_Tmobile_T__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Sprint or T-Mobile</label>
    <type>Text</type>
</CustomField>