force-app/main/default/objects/Lease_Negotiation__c/fields/PO_Submitter__c.field-meta.xml
<CustomField>
    <fullName>PO_Submitter__c</fullName>
    <formula>Submitter__r.FirstName &amp; &apos; &apos; &amp;  Submitter__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Submitter</label>
    <type>Text</type>
</CustomField>