force-app/main/default/objects/Lease_Negotiation__c/fields/PO_Vendor__c.field-meta.xml
<CustomField>
    <fullName>PO_Vendor__c</fullName>
    <formula>Vendor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Vendor</label>
    <type>Text</type>
</CustomField>