force-app/main/default/objects/Lease_Negotiation__c/fields/PO_Vendor_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Vendor_PO_Number__c</fullName>
    <formula>Lease_Negotiation_Vendor_PO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Vendor PO Number</label>
    <type>Text</type>
</CustomField>