force-app/main/default/objects/Lease_Negotiation__c/fields/Prep_decom_days_elapsed_physical_decom__c.field-meta.xml
<CustomField>
    <fullName>Prep_decom_days_elapsed_physical_decom__c</fullName>
    <formula>Prepare_for_Physical_Decom_End_Date__c - Physical_Decon_Process_Start_Date__c</formula>
    <label>Prep decom days elapsed physical decom</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>