force-app/main/default/objects/Lease_Negotiation__c/fields/Prepare_for_Physical_Decom_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Prepare_for_Physical_Decom_Start_Date__c</fullName>
    <inlineHelpText>Indicates when negotiation started in this status.</inlineHelpText>
    <label>Prepare for Physical Decom Start Date</label>
    <type>Date</type>
</CustomField>