force-app/main/default/objects/Lease_Negotiation__c/fields/Regional_LN_Manager__c.field-meta.xml
<CustomField>
    <fullName>Regional_LN_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional LN Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>Divest</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Lease_Negotiation5</relationshipName>
    <type>Lookup</type>
</CustomField>