force-app/main/default/objects/Lease_Negotiation__c/fields/Responsible_for_Physical_Decom__c.field-meta.xml
<CustomField>
    <fullName>Responsible_for_Physical_Decom__c</fullName>
    <formula>TEXT(Divestiture_Site__r.Deconstruction_Team__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Responsible for Physical Decom</label>
    <type>Text</type>
</CustomField>