force-app/main/default/objects/Lease_Negotiation__c/fields/RF_Shutdown_Date_Complete__c.field-meta.xml
<CustomField>
    <fullName>RF_Shutdown_Date_Complete__c</fullName>
    <formula>Divestiture_Site__r.RF_Shutdown_Date_Complete__c</formula>
    <inlineHelpText>Populated from related divest site</inlineHelpText>
    <label>RF Shutdown Date (Complete)</label>
    <type>Date</type>
</CustomField>