force-app/main/default/objects/Lease_Negotiation__c/fields/RF_Shutdown_Forecast_Date_Source_System__c.field-meta.xml
<CustomField>
    <fullName>RF_Shutdown_Forecast_Date_Source_System__c</fullName>
    <formula>Divestiture_Site__r.RF_Shutdown_Forecast_Date_from_Source_Sy__c</formula>
    <inlineHelpText>Populated from related divest site</inlineHelpText>
    <label>RF Shutdown Forecast Date (Source System</label>
    <type>Date</type>
</CustomField>