force-app/main/default/objects/Lease_Negotiation__c/fields/Schedule_Incentive_Payment_1__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Incentive_Payment_1__c</fullName>
    <formula>IF(ISPICKVAL( NNR_or_NOT__c , &apos;Pay &amp; Walk&apos;),
   IF( Submitter_Assignment_Date__c + 30 &gt;  Landlord_Signed_Agreement__c , true, false),
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Start: Submitter is first identified
End: Landlord Signed Agreement (Date)
Only applicable if  Pay &amp; Walk  is selected, not &quot;NNR/NOT&quot;
If &lt;=30 days, then flag this PO needing to be issued</inlineHelpText>
    <label>Schedule Incentive Payment #1</label>
    <type>Checkbox</type>
</CustomField>