force-app/main/default/objects/Lease_Negotiation__c/fields/Schedule_Incentive_Payment_2__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Incentive_Payment_2__c</fullName>
    <formula>IF(ISPICKVAL( NNR_or_NOT__c , &apos;Pay &amp; Walk&apos;),
   IF( Submitter_Assignment_Date__c + 60 &gt;  Landlord_Signed_Agreement__c , true, false),
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>&quot;Start: Submitter is first identified
End: Landlord Signed Agreement (Date)&quot;	
&quot;Only applicable if &quot;&quot;LTA&quot;&quot; is selected, not &quot;&quot;NNR/NOT&quot;&quot;
If &lt;=60 days, then flag this PO needing to be issued&quot;</inlineHelpText>
    <label>Schedule Incentive Payment #2</label>
    <type>Checkbox</type>
</CustomField>