force-app/main/default/objects/Lease_Negotiation__c/fields/Site_Deconstruction__c.field-meta.xml
<CustomField>
    <fullName>Site_Deconstruction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Deconstruction</label>
    <referenceTo>Site_Decommission__c</referenceTo>
    <relationshipLabel>Lease Negotiation</relationshipLabel>
    <relationshipName>Lease_Negotiation</relationshipName>
    <type>Lookup</type>
</CustomField>