force-app/main/default/objects/Lease_Negotiation__c/fields/Site_is_on_Hold__c.field-meta.xml
<CustomField>
    <fullName>Site_is_on_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site is on Hold</label>
    <type>Checkbox</type>
</CustomField>