force-app/main/default/objects/Lease_Negotiation__c/fields/Site_On_Hold_Notes__c.field-meta.xml
<CustomField>
    <fullName>Site_On_Hold_Notes__c</fullName>
    <label>Site On Hold Notes</label>
    <type>TextArea</type>
</CustomField>