force-app/main/default/objects/Lease_Negotiation__c/fields/Start_Lease_MLA_Stage_in_Days_elapsed__c.field-meta.xml
<CustomField>
    <fullName>Start_Lease_MLA_Stage_in_Days_elapsed__c</fullName>
    <formula>Start_lease_Neg_End_date__c  - MLA_Termination_Process_Start_Date__c</formula>
    <label>Start Lease -MLA Stage in Days elapsed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>