force-app/main/default/objects/Lease_Negotiation__c/fields/Start_Lease_Neg_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Start_Lease_Neg_Start_date__c</fullName>
    <description>Used primarily for reporting- auto-populates with status change</description>
    <inlineHelpText>Used primarily for reporting- auto-populates with status change</inlineHelpText>
    <label>Start Lease Neg Start date</label>
    <type>Date</type>
</CustomField>