force-app/main/default/objects/Lease_Negotiation__c/fields/Submitter__c.field-meta.xml
<CustomField>
    <fullName>Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The person completing the Lease Negotiation.</inlineHelpText>
    <label>Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lease_Negotiation2</relationshipName>
    <type>Lookup</type>
</CustomField>