force-app/main/default/objects/Lease_Negotiation__c/fields/Submitter_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Assignment_Date__c</fullName>
    <description>Date Submitter is first identified</description>
    <inlineHelpText>Date Submitter is first identified</inlineHelpText>
    <label>Submitter Assignment Date</label>
    <type>Date</type>
</CustomField>