force-app/main/default/objects/Lease_Negotiation__c/fields/Suggested_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Vendor__c</fullName>
    <inlineHelpText>Suggested vendor to assign based on vendors assigned to the same landlord for other sites.  Excludes big 3 MLAs and updated via a process.</inlineHelpText>
    <label>Suggested Vendor (ex big 3 MLAs)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>