force-app/main/default/objects/Lease_Negotiation__c/fields/Super_Landlord__c.field-meta.xml
<CustomField>
    <fullName>Super_Landlord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Super Landlord</label>
    <type>Checkbox</type>
</CustomField>