force-app/main/default/objects/Lease_Negotiation__c/fields/T_Mob_Rev_End_Non_MLA_days_Elapsed__c.field-meta.xml
<CustomField>
    <fullName>T_Mob_Rev_End_Non_MLA_days_Elapsed__c</fullName>
    <formula>T_Mobile_Review_NNr_Not_End_Date__c - Non_MLA_Termination_Process_Start_Date__c</formula>
    <label>T-Mob Rev End - Non-MLA days Elapsed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>