force-app/main/default/objects/Lease_Negotiation__c/fields/T_Mobile_Completed_Signing__c.field-meta.xml
<CustomField>
    <fullName>T_Mobile_Completed_Signing__c</fullName>
    <label>T-Mobile Completed Signing</label>
    <type>Date</type>
</CustomField>