force-app/main/default/objects/Lease_Negotiation__c/fields/T_Mobile_Review_NNr_Not_End_Date__c.field-meta.xml
<CustomField>
    <fullName>T_Mobile_Review_NNr_Not_End_Date__c</fullName>
    <description>Used primarily for reporting- auto-populates with status change</description>
    <inlineHelpText>Used primarily for reporting- auto-populates with status change</inlineHelpText>
    <label>T-Mobile Review NNr/Not End Date</label>
    <type>Date</type>
</CustomField>