force-app/main/default/objects/Lease_Negotiation__c/fields/TAW_Approval_Date_1__c.field-meta.xml
<CustomField>
    <fullName>TAW_Approval_Date_1__c</fullName>
    <label>TAW Approval Date</label>
    <type>Date</type>
</CustomField>