force-app/main/default/objects/Lease_Negotiation__c/fields/TAW_Approved__c.field-meta.xml
<CustomField>
    <fullName>TAW_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check the box if the attached Termination Approval Worksheet is approved.</inlineHelpText>
    <label>TAW Approved</label>
    <type>Checkbox</type>
</CustomField>