force-app/main/default/objects/Lease_Negotiation__c/fields/TAW_Approved_by__c.field-meta.xml
<CustomField>
    <fullName>TAW_Approved_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TAW Approved by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lease_Negotiation1</relationshipName>
    <type>Lookup</type>
</CustomField>