force-app/main/default/objects/Lease_Negotiation__c/fields/Termination_Approval_Worksheet__c.field-meta.xml
<CustomField>
    <fullName>Termination_Approval_Worksheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Termination Approval Worksheet</label>
    <referenceTo>Termination_Approval_Worksheet__c</referenceTo>
    <relationshipLabel>Lease Negotiation</relationshipLabel>
    <relationshipName>Lease_Negotiation</relationshipName>
    <type>Lookup</type>
</CustomField>