force-app/main/default/objects/Lease_Negotiation__c/fields/TOO_required__c.field-meta.xml
<CustomField>
    <fullName>TOO_required__c</fullName>
    <label>TOO required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>