force-app/main/default/objects/Lease_Negotiation__c/fields/TOO_Sent_to_Landlord__c.field-meta.xml
<CustomField>
    <fullName>TOO_Sent_to_Landlord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TOO Sent to Landlord</label>
    <type>Checkbox</type>
</CustomField>