force-app/main/default/objects/Lease_Negotiation__c/fields/Update__c.field-meta.xml
<CustomField>
    <fullName>Update__c</fullName>
    <inlineHelpText>Select the option when all applicable leases on the site have been terminated and the source system has been updated.</inlineHelpText>
    <label>Update Lease Termination Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lease Termination Task 4815 in Sprint Vision was updated</fullName>
            </value>
            <value>
                <fullName>Lease Termination in Element was updated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>