force-app/main/default/objects/Lease_Negotiation__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lease Negotiation</relationshipLabel>
    <relationshipName>Lease_Negotiation</relationshipName>
    <type>Lookup</type>
</CustomField>