force-app/main/default/objects/Lease_Negotiation__c/fields/White_Glove_Comments__c.field-meta.xml
<CustomField>
    <fullName>White_Glove_Comments__c</fullName>
    <description>Special Handling Required- Check this box to update and clearly identify across the Divest Program all records that require White Glove Escalation &amp; Handling.</description>
    <inlineHelpText>Special Handling Required- Check this box to update and clearly identify across the Divest Program all records that require White Glove Escalation &amp; Handling.</inlineHelpText>
    <label>White Glove Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>