force-app/main/default/objects/Lease_Negotiation__c/validationRules/Comments_required_for_Forecast_NTP_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Comments_required_for_Forecast_NTP_date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Divestiture_Site__r.By_Pass_Validation__c = true,ISCHANGED(Forecasted_NTP_Date__c),OR(ISBLANK(Enter_Team_Comments_Max_240__c),
NOT(ISCHANGED(Enter_Team_Comments_Max_240__c))))</errorConditionFormula>
    <errorMessage>Comments is required when forecast date changed</errorMessage>
</ValidationRule>