force-app/main/default/objects/Lease_Negotiation__c/validationRules/Lease_Negotiation_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Lease_Negotiation_Validation_Rule</fullName>
    <active>false</active>
    <description>Forecasted NTP Date is required</description>
    <errorConditionFormula>AND(NOT(ISNEW()),ISNULL(Forecasted_NTP_Date__c), Responsible_for_Physical_Decom__c = &apos;National&apos;,
ISPICKVAL( PRIORVALUE (Negotiation_Steps__c), &quot;Start Lease Negotiation Process&quot;),ISCHANGED(Negotiation_Steps__c))</errorConditionFormula>
    <errorDisplayField>Forecasted_NTP_Date__c</errorDisplayField>
    <errorMessage>Forecasted NTP Date is required in Stage 2</errorMessage>
</ValidationRule>