force-app/main/default/objects/Lease_Negotiation__c/validationRules/Site_On_Hold_Notes.validationRule-meta.xml
<ValidationRule>
    <fullName>Site_On_Hold_Notes</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Site_is_on_Hold__c = TRUE, Site_On_Hold_Notes__c = &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Site_On_Hold_Notes__c</errorDisplayField>
    <errorMessage>Please enter reason why the site is on hold</errorMessage>
</ValidationRule>